Create focus-spot for the scanning camera.

--- a/app/src/main/res/layout/activity_barcode_scanner.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner.xml
@@ -6,9 +6,20 @@
     android:orientation="vertical"
     tools:context=".BarcodeScannerActivity">
 
-    <SurfaceView
-        android:id="@+id/activity_barcode_scanner_surface"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <SurfaceView
+            android:id="@+id/activity_barcode_scanner_surface"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <cvo.com.mbarcodescanner.views.ViewCameraFocus
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@color/colorDimLighterGray"/>
+
+    </RelativeLayout>
 </LinearLayout>
